Remove obsolete celery debug functionality
This was an old remnant that was used to test celery functionality and
proper settings override for integration testing. This way of testing
is not used anymore (these kind of tests are more appropriate for
integration testing phase), so we removed the dead code from the
application.
